syntax = "proto3";

package ci.proto.storage;

option java_package = "ru.yandex.ci.storage.core";

import "google/protobuf/timestamp.proto";

import "ci/proto/storage/common.proto";
import "ci/proto/common.proto";

enum IterationType {
    FAST = 0;
    FULL = 1;
    HEAVY = 2;
    MUTE = 3;
}

message IterationId {
    string check_id = 1;
    IterationType check_type = 2;
    uint32 number = 3;
}

message Iteration {
    IterationId id = 1;
    CheckTaskType tasksType = 2;
    google.protobuf.Timestamp created = 3;
    CheckStatus status = 10;
    IterationInfo info = 11;
    repeated ExpectedTask expectedTasks = 12;
    map<string, string> attributes = 13;

    bool useImportantDiffIndex = 14;
    bool useSuiteDiffIndex = 15;

    repeated ExpectedTask registeredExpectedTasks = 16;
}

message FatalErrorInfo {
    string message = 1;
    string details = 2;
    string sandbox_task_id = 3;
}

message IterationInfo {
    repeated string fast_targets = 1;
    repeated string disabled_toolchains = 2;

    string not_recheck_reason = 5;
    bool pessimized = 6;
    string pessimization_info = 7;
    string advised_pool = 8;
    string testenv_check_id = 10;

    int32 progress = 11;

    string fatal_error_message = 12 [deprecated = true];
    string fatal_error_details = 13 [deprecated = true];
    FatalErrorInfo fatal_error_info = 14;

    StrongModePolicy strong_mode_policy = 15;
    bool autodetected_fast_circuit = 16;

    ci.common.FlowProcessId flow_process_id = 17;
    int32 flow_launch_number = 18;
}

message ExpectedTask {
    string job_name = 1;
    bool right = 2;
}

enum StrongModePolicy {
    BY_A_YAML = 0;
    FORCE_ON = 1;
    FORCE_OFF = 2;
}
